@@ -214,7 +214,8 @@ MaxRequestsPerChild    0
 # prevent Apache from glomming onto all bound IP addresses (0.0.0.0)
 #
 #Listen 12.34.56.78:80
-Listen @@Port@@
+@nonssl_listen_stmt_1@
+@nonssl_listen_stmt_2@
 
 #
 # Dynamic Shared Object (DSO) Support
